--- a/kids.html
+++ b/kids.html
@@ -230,7 +230,7 @@
 
     <li><a href="contact.html">Contact</a></li>
   </ul>
-  <div class="icon">🎬</div>
+ <img src="logo.png" alt="Logo" />
 </nav>
 
 <!-- Intro Section with Background Video -->
@@ -325,4 +325,5 @@
 
 </body>
 </html>
+
 
