--- a/kids.html
+++ b/kids.html
@@ -230,7 +230,7 @@
 
     <li><a href="contact.html">Contact</a></li>
   </ul>
- <img src="logo.png" alt="Logo" />
+  <img src="logo.png" alt="Logo" style="width: 50px; height: 50px;">
 </nav>
 
 <!-- Intro Section with Background Video -->
@@ -325,5 +325,6 @@
 
 </body>
 </html>
+
 
 
