--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,10 @@
   <div class="logo">Ageflix</div>
   <ul>
     <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
+
+    <li><a href="contact.html">Contact</a></li>
   </ul>
+  <img src="logo.png" alt="Logo" style="width: 50px; height: 50px;">
 </nav>
 
 <section style="padding:50px; text-align:center;">
