--- a/about.html
+++ b/about.html
@@ -44,12 +44,11 @@
   <div class="logo">Ageflix</div>
   <ul>
     <li><a href="index.html">Home</a></li>
-    <li><a href="movies.html">Movies</a></li>
-    <li><a href="about.html">About</a></li>
+
     <li><a href="contact.html">Contact</a></li>
   </ul>
-  <div class="icon">🎬</div>
-</nav>
+  <img src="logo.png" alt="Logo" style="width: 50px; height: 50px;">
+</nav>>
 
 <section class="about">
   <h1>About Ageflix Project</h1>
@@ -123,3 +122,4 @@
 
 </body>
 </html>
+
