--- a/adult.html
+++ b/adult.html
@@ -230,7 +230,7 @@
 
     <li><a href="contact.html">Contact</a></li>
   </ul>
-  <div class="icon">🎬</div>
+  <img src="logo.png" alt="Logo" style="width: 50px; height: 50px;">
 </nav>
 
 <!-- Intro Section with Background Video -->
@@ -325,3 +325,4 @@
 
 </body>
 </html>
+
