--- a/index.html
+++ b/index.html
@@ -47,10 +47,11 @@
 <nav class="navbar">
   <div class="logo">Ageflix</div>
   <ul>
-    <li><a href="about.html">About</a></li>
- 
+    <li><a href="index.html">Home</a></li>
+
     <li><a href="contact.html">Contact</a></li>
   </ul>
+  <img src="logo.png" alt="Logo" style="width: 50px; height: 50px;">
 </nav>
 
 <div class="slider">
@@ -181,4 +182,5 @@ document.getElementById("startBtn").addEventListener("click", init);
 
 </body>
 </html>
+
 
