--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <nav class="navbar">
   <div class="logo">Ageflix</div>
   <ul>
-    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
 
     <li><a href="contact.html">Contact</a></li>
   </ul>
@@ -182,5 +182,6 @@ document.getElementById("startBtn").addEventListener("click", init);
 
 </body>
 </html>
+
 
 
