--- a/senior.html
+++ b/senior.html
@@ -227,7 +227,7 @@
   <div class="logo">Ageflix</div>
   <ul>
     <li><a href="index.html">Home</a></li>
-
+ <li><a href="about.html">About</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
   <img src="logo.png" alt="Logo" style="width: 50px; height: 50px;">
@@ -325,5 +325,6 @@
 
 </body>
 </html>
+
 
 
